# cowsay-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.rst  makefile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cowsay.yaml
cowsay/: __init__.py  __main__.py  characters.py  main.py  test.py
cowsay.egg-info/: PKG-INFO  SOURCES.txt
cowsay/tests/: solutions.py  test_api.py  test_output.py
docs/: cowsay.html  index.html  search.js
docs/cowsay/: __main__.html  characters.html  main.html  test.html
